tests/should_fail/unsupported/char_pattern.rs
extern crate creusot_std;

pub fn char_match_bad(x: char) {
    match x {
        'a' => (),
        _ => (),
    }
}
