tests/should_fail/unsupported/char_pattern.stderr
warning: support for string types is limited and experimental
 --> char_pattern.rs:4:11
  |
4 |     match x {
  |           ^
  |
  = note: `#[warn(creusot::experimental)]` on by default

error: match on char is currently unsupported
 --> char_pattern.rs:4:5
  |
4 |     match x {
  |     ^^^^^^^

error: aborting due to 1 previous error; 1 warning emitted

